# bandmate-studio

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  MVP-PLAN.md  README.md  SPEC.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: CLEANUP-PLAN.md  CODEC-PARITY-AUDIT.md  COMPAT-TEST.md  DEV-SETUP.md  EXPORT-PARITY-TEST.md  HYGIENE-PLAN.md  ROADMAP.md  SMOKE-TEST.md  VERSIONING.md
docs/archive/: MVP-PLAN-2026-05-11.md
logos/: README.md
logos/bandmate-studio-icon/: README.md
scripts/: bump-version.mjs  check-changelog-entry.mjs  check-version-sync.mjs  diff-snapshots.sh  snapshot-working-folder.sh  update-planning.sh
scripts/lib/: planning-paths.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  midi.rs
src/codec/: index.ts  jcm.test.ts  jcm.ts  jcp.test.ts  jcp.ts  jcs.test.ts  jcs.ts  types.ts  wav.ts
src/components/: AvailableSongsPane.tsx  Button.tsx  ChannelGrid.tsx  CleanupConfirmDialog.tsx  ContextMenu.tsx  EditorPane.tsx  EmptyState.tsx  ExportToUsbDialog.tsx  ImportTrackMapDialog.tsx  MainPlaceholder.tsx  NewPlaylistDialog.tsx  NewSongDialog.tsx  NewTrackMapDialog.tsx  PlaylistEditor.tsx  PlaylistHeader.tsx  RenameDialog.tsx  SaveConfirmDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  SmartImportConfirmDialog.tsx  SongEditor.tsx  SongHeader.tsx  SourceFilesPane.tsx  Toast.tsx  TrackMapEditor.tsx  TrackMapHeader.tsx  (+3 more)
(+25 files in other folders)
